2008-03-19  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keyboard-properties-xkblt.c:
	(xkb_layouts_dnd_data_received): don't crash when called for a
	drag with no selected items (bug #523379)

2008-03-01  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keyboard-properties-a11y.c:
	(notifications_button_clicked_cb),
	(mousekeys_accel_time_to_widget),
	(mousekeys_accel_time_from_widget), (setup_a11y_tabs): fix leaks
	and remove unnecessary casts

2008-02-05  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keyboard-properties.glade: don't mark padding strings as
	translatable (bug #514598)

2008-01-25  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* keyboard-bell.png:
	* keyboard-cursor.png:
	* keyboard-repeat.png:
	* keyboard-volume.png: remove obsolete icons
	* gnome-keyboard-properties.c: (setup_dialog): don't initialize
	our custom stock icons since we don't use them any longer

2008-01-16  Denis Washington  <denisw@svn.gnome.org>

	* gnome-keyboard-properties.glade:
	Don't mark stock labels as translatable. (Bug #508270)

2008-01-14  Rodrigo Moya <rodrigo@gnome-db.org>

	* Makefile.am: added missing headers to SOURCES.

2008-01-14  Denis Washington  <denisw@svn.gnome.org>

	* gnome-keyboard-properties.glade:
	Move "Type to test settings" entry beneath the notebook to make it
	easily accessible from all tabs. (Also handy for layout and a11y
	preferences.)

2008-01-02  Denis Washington  <denisw@svn.gnome.org>

	* gnome-keyboard-properties.c: Add --a11y command-line option to
	show the Accessibility tab when started.

2008-01-02  Denis Washington  <denisw@svn.gnome.org>

	Merge all keyboard accessibility options into the keyboard capplet.

	* gnome-keyboard-properties-a11y.[ch]: added
	* gnome-keyboard-properties.c: Remove the "Accessibility..." button,
	all a11y features are in the Keyboard dialog now.

2007-12-17  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkblt.c, gnome-keyboard-properties-xkb.h,
	gnome-keyboard-properties-xkbpv.c,