@@ -1,3 +1,8 @@
+2008-03-24  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-keyboard-properties.c: (setup_dialog): don't show the typing
+	break tab if the typing monitor is not available (bug #524034)
+
 2008-03-19  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-keyboard-properties-xkblt.c:
